add driver route list
